<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">民生宝</string>

    <string name="host_value">msht.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ensure_send">确认提交</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab_my">我的</string>
    <string name="home_tab_mail">商城</string>
    <string name="home_tab_home">首页</string>
    <string name="home_tab_order">订单</string>
    <string name="special_topic_activity">专题活动</string>
    <string name="hot_recommend">热门推荐</string>
    <!-- 我的模块  -->
    <string name="bind_weiChat">绑定微信</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_phone_tip">为了您的个人数据安全，请绑定手机号</string>
    <string name="capture_code">获取验证码</string>
    <string name="current_location">[当前位置]</string>
    <string name="correlation_text">去关联</string>
    <string name="customerNo_add_address">用户号快速添加</string>
    <string name="handwork_add_address">纯手工细心添加</string>
    <string name="my_nick_name">昵称</string>
    <string name="my_sex">性别</string>
    <string name="my_phonenumber">手机</string>
    <string name="my_phone">手机号</string>
    <string name="my_login">登录</string>
    <string name="my_register">注册</string>
    <string name="find_password">找回密码</string>
    <string name="my_dialog_title">民生宝</string>
    <string name="other_login">其他登录方式</string>
    <string name="password_text">密码</string>
    <string name="please_input_password">请输入至少6位数的密码</string>
    <string name="portrait_text">头像</string>
    <string name="please_input_register_phone">请填写注册时的手机号</string>
    <string name="please_select_your_address">请选择您的地址</string>
    <string name="reset_password">重置密码</string>
    <string name="gas_payfee">燃气缴费</string>
    <string name="gas_introduce">燃气介绍</string>
    <string name="gas_company_profile">公司概况</string>
    <string name="gas_service_guide">服务指南</string>
    <string name="gas_Tool_Use">燃气具使用</string>
    <string name="gas_safety">燃气安全</string>
    <string name="gas_need_know">燃气须知</string>
    <string name="yingye_wangdian">营业网点</string>
    <string name="gas_baoxiu_yewu">居民燃气报装业务</string>
    <string name="gas_price_jiaona">气费缴纳</string>
    <string name="gas_service_promise">服务承诺</string>
    <string name="NOT_OPEN_condition">常见未能正常开通情况</string>
    <string name="input_customerNo">请输入燃气用户号</string>
    <string name="integral_satisfaction_degree">整体满意度</string>
    <string name="please_input_evaluated_content">请输评价内容</string>
    <string name="not_know_operation_step">不清楚？查看充值操作流程图</string>
    <string name="near_ic_card_machine">附近IC卡充值机</string>
    <string name="gas_price_explain">气价说明</string>
    <string name="share_have_gift">分享有礼</string>
    <string name="look_all_order">查看全部订单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="mall_order_text">商城订单</string>
    <string name="favorite_text">收藏夹</string>
    <string name="my_footprint">我的足迹</string>
    <string name="gas_order_text">燃气工单</string>
    <string name="consult_recommend">咨询建议</string>
    <string name="address_manager">地址管理</string>
    <string name="invoice_apply">发票申请</string>
    <string name="supplement_text">去补充</string>
    <!--非模块 -->
    <string name="all_text">全部</string>
    <string name="consumption_text">消费</string>
    <string name="distance_with_you">距离:</string>
    <string name="scan_code">扫一扫</string>
    <string name="select_date">选择日期</string>
    <string name="balance">余额</string>
    <string name="recharge">充值</string>
    <string name="balance_detail_text">余额明细</string>
    <string name="flashlight_text">手电筒</string>
    <string name="qrCode_text">二维码</string>
    <string name="barCode_text">条形码</string>
    <string name="select_all_text">全选</string>
    <string name="msb_more">更多</string>
    <string name="close_page">关闭</string>
    <string name="msb_share_to_weiChat">分享到:</string>
    <string name="cancel_share">取消分享</string>
    <string name="setting">Setting</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="title_dialog">Tips</string>
    <string name="message_overlay_failed">Your phone is not allowed us to draw on other applications.</string>
    <string name="message_permission_rationale">Grant the following permissions to continue the program:\n\n%1$s</string>
    <string name="message_permission_always_failed">Please give us permission in the settings:\n\n%1$s</string>
    <string name="message_setting_comeback">The user comes back from the settings page.</string>


    <string name="network_error">网络连接断开，请检查网络设置。</string>
    <string name="loading_text">加载中…</string>
    <string name="load_more_text">正在加载...</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="xlistview_header_hint_failt">刷新失败</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="xrefreshview_header_hint_normal">下拉查看分类</string>
    <string name="xrefreshview_header_hint_ready">松开查看分类</string>
    <string name="xrefreshview_never_refresh">从未刷新</string>
    <string name="xrefreshview_refresh_justnow">刚刚刷新</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>
    <string name="i_know">我知道了</string>
    <string name="re_recharge">请重新支付！</string>
    <string name="address_text">地址</string>
    <string name="cancel_order">取消订单</string>
    <string name="cancel_text">取消</string>
    <string name="city_text">城市</string>
    <!--保险   -->
    <string name="total_text">共计:</string>
    <string name="delivery_way">配送方式</string>
    <string name="post_mail">邮寄</string>
    <string name="pick_up_oneself">自提</string>

    <!--优惠劵  -->
    <string name="effective_date">有效期至:</string>
    <string name="use_text">使用说明:</string>
    <string name="quick_delivery">尽快配送</string>

    <string name="order_message">订单消息</string>
    <string name="notification_message">公告栏</string>


    <string name="loading">加载中</string>
    <string name="please_login">请登录</string>

    <!--商城 -->
    <string name="monetary_unit">¥</string>
    <string name="click_button_reload">点击按钮重新加载</string>
    <string name="reload">重新加载</string>
    <string name="fling_behavior">com.msht.minshengbao.androidShop.FlingBehavior</string>
</resources>
