<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.msht.minshengbao.functionActivity.fragment.GasNeedKnowFrag">
    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/id_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/selector_touch_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_company_profile"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_12"
            android:textSize="@dimen/text_18"
            />

    </RelativeLayout>
    <include layout="@layout/layout_line_gray"/>
    <RelativeLayout
        android:id="@+id/id_layout_usersafety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_touch_background"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_service_guide"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:textSize="@dimen/text_18"
            />
    </RelativeLayout>
    <include layout="@layout/layout_line_gray"/>
    <RelativeLayout
        android:id="@+id/id_layout_tooluse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_touch_background"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_Tool_Use"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_12"
            android:textSize="@dimen/text_18"
            />
    </RelativeLayout>
    <include layout="@layout/layout_line_gray"/>
    <RelativeLayout
        android:id="@+id/id_layout_safety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_touch_background"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas_safety"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_12"
            android:textSize="@dimen/text_18"
            />
    </RelativeLayout>
    <include layout="@layout/layout_line_gray"/>

</LinearLayout>
