<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.msht.minshengbao.functionActivity.fragment.LoginMyFrag">
    <com.msht.minshengbao.custom.widget.MyScrollview
        android:id="@+id/id_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray"
            android:orientation="vertical">
            <include layout="@layout/layout_personal_info_head"/>
            <RelativeLayout
                android:id="@+id/id_mall_order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_touch_background"
                android:minHeight="@dimen/margin_width48">
                <TextView
                    android:id="@+id/id_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mall_order_text"
                    android:layout_marginLeft="@dimen/margin_width10"
                    android:layout_marginStart="@dimen/margin_width10"
                    android:layout_marginBottom="@dimen/margin_width10"
                    android:layout_marginTop="@dimen/margin_width10"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_width18"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/id_look_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/id_text1"
                    android:layout_toEndOf="@+id/id_text1"
                    android:gravity="end"
                    android:layout_marginLeft="@dimen/margin_width10"
                    android:layout_marginStart="@dimen/margin_width10"
                    android:layout_toLeftOf="@+id/id_forward_img"
                    android:layout_toStartOf="@+id/id_forward_img"
                    android:layout_marginRight="@dimen/margin_width10"
                    android:layout_centerVertical="true"
                    android:text="@string/look_all_order"
                    android:textSize="@dimen/text_width14"
                    android:textColor="@color/color_9e9e9e"/>
                <ImageView
                    android:id="@+id/id_forward_img"
                    android:layout_width="@dimen/margin_16"
                    android:layout_height="@dimen/margin_16"
                    android:contentDescription="@string/picture_text"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="@dimen/margin_width10"
                    android:layout_marginEnd="@dimen/margin_width10"
                    android:src="@drawable/forward_2x"/>
            </RelativeLayout>
            <include layout="@layout/layout_line_gray"/>
            <include layout="@layout/layout_my_mall_order_view"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_width15"
                android:background="@color/background_gray"/>
            <com.msht.minshengbao.custom.MyImageTextButton
                android:id="@+id/id_repair_order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftImage="@drawable/repair_order_mine_xh"
                app:rightImage="@drawable/forward_2x"
                app:leftText="@string/repair_order_text"
                app:leftTextColor="@color/color_383838">
            </com.msht.minshengbao.custom.MyImageTextButton>
            <include layout="@layout/layout_line_gray"/>
            <com.msht.minshengbao.custom.MyImageTextButton
                android:id="@+id/id_gas_order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftImage="@drawable/gas_order_mine_xh"
                app:rightImage="@drawable/forward_2x"
                app:leftText="@string/gas_order_text"
                app:leftTextColor="@color/color_383838">
            </com.msht.minshengbao.custom.MyImageTextButton>
            <include layout="@layout/layout_line_gray"/>
            <com.msht.minshengbao.custom.MyImageTextButton
                android:id="@+id/id_invoice_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftImage="@drawable/invoice_xh"
                app:rightImage="@drawable/forward_2x"
                app:leftText="@string/invoice_apply"
                app:leftTextColor="@color/color_383838">
            </com.msht.minshengbao.custom.MyImageTextButton>
            <include layout="@layout/layout_line_gray"/>
            <com.msht.minshengbao.custom.MyImageTextButton
                android:id="@+id/id_address_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftImage="@drawable/address_manage_xh"
                app:rightImage="@drawable/forward_2x"
                app:leftText="@string/address_manager"
                app:leftTextColor="@color/color_383838">
            </com.msht.minshengbao.custom.MyImageTextButton>
            <include layout="@layout/layout_line_gray"/>
            <com.msht.minshengbao.custom.MyImageTextButton
                android:id="@+id/id_re_consult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftImage="@drawable/consult_recommend_xh"
                app:rightImage="@drawable/forward_2x"
                app:leftText="@string/consult_recommend"
                app:leftTextColor="@color/color_383838">
            </com.msht.minshengbao.custom.MyImageTextButton>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_width40"
                android:background="@color/background_gray"/>
        </LinearLayout>
    </com.msht.minshengbao.custom.widget.MyScrollview>
    <LinearLayout
        android:id="@+id/id_li_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="@dimen/margin_width70"
        android:orientation="vertical">
        <View
            android:id="@+id/id_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_width20" />
        <RelativeLayout
            android:id="@+id/id_re_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minHeight="@dimen/margin_50">
            <TextView
                android:id="@+id/id_tv_naviga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="我的"
                android:textColor="@android:color/transparent"
                android:textSize="@dimen/text_width16" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
