<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_message_center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.msht.minshengbao.functionActivity.MessageCenterActivity">
    <include layout="@layout/layout_header"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:background="@color/white"
       android:baselineAligned="true"
       android:minHeight="@dimen/margin_width48">
       <LinearLayout
           android:id="@+id/id_li_ordertype"
           android:layout_weight="0.5"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:minHeight="@dimen/margin_width50"
           android:orientation="vertical">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/margin_width48">
               <TextView
                   android:id="@+id/id_type1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:text="@string/order_message"
                   android:textSize="@dimen/text_width16"
                   android:textColor="@color/title_tv"/>
           </RelativeLayout>
           <View
               android:id="@+id/id_view1"
               android:layout_width="match_parent"
               android:layout_height="@dimen/margin_width3"
               android:background="@color/colorOrange"/>
       </LinearLayout>
       <LinearLayout
           android:id="@+id/id_li_gonggao"
           android:layout_weight="0.5"
           android:layout_width="0dp"
           android:layout_height="@dimen/margin_width50"
           android:orientation="vertical">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/margin_width48">
               <TextView
                   android:id="@+id/id_type2"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:text="@string/notification_message"
                   android:textSize="@dimen/text_width16"
                   android:textColor="@color/title_tv"/>
           </RelativeLayout>
           <View
               android:id="@+id/id_view2"
               android:layout_width="match_parent"
               android:layout_height="@dimen/margin_width2"
               android:background="@color/white" />
       </LinearLayout>
   </LinearLayout>
    <include layout="@layout/layout_line_gray"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.msht.minshengbao.ViewUI.PullRefresh.XListView
            android:id="@+id/lv_swipe_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.msht.minshengbao.ViewUI.PullRefresh.XListView>
        <include layout="@layout/layout_no_data_view"
            android:id="@+id/id_nodata_view"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/id_layout_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_width56"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">
            <include layout="@layout/layout_line_gray"/>
            <RelativeLayout
                android:id="@+id/id_re_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_width10"
                android:layout_marginStart="@dimen/margin_width10">
                <CheckBox
                    android:id="@+id/id_select_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_width10"
                    android:layout_marginStart="@dimen/margin_width10"
                    android:padding="@dimen/margin_width5"
                    android:drawableLeft="@drawable/selector_my_radiobutton"
                    android:drawableStart="@drawable/selector_my_radiobutton"
                    android:button="@null"
                    android:drawablePadding="@dimen/margin_width10"
                    android:text="@string/select_all_text"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/text_width16" />
                <Button
                    android:id="@+id/id_btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/margin_width30"
                    android:minWidth="@dimen/margin_width60"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_width10"
                    android:layout_marginRight="@dimen/margin_width10"
                    android:background="@drawable/shape_orange_corner_boder_inwithte"
                    android:text="@string/delect_text"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/text_width16" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
